--- a/examples/hello-world/Makefile
+++ b/examples/hello-world/Makefile
@@ -1,8 +1,8 @@
 # name of your application
-APPLICATION = hello-world
+APPLICATION = mirea
 
 # If no BOARD is found in the environment, use this default:
-BOARD ?= native
+BOARD ?= unwd-range-l1-r3
 
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../..
@@ -10,7 +10,12 @@ RIOTBASE ?= $(CURDIR)/../..
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
 # development process:
-DEVELHELP ?= 1
+CFLAGS += -DDEVELHELP
+
+USEMODULE += rtctimers-millis
+
+FEATURES_REQUIRED += periph_rtc
+FEATURES_REQUIRED += periph_gpio
 
 # Change this to 0 show compiler invocation lines by default:
 QUIET ?= 1
