--- a/examples/hello-world/Makefile
+++ b/examples/hello-world/Makefile
@@ -10,10 +10,16 @@ RIOTBASE ?= $(CURDIR)/../..
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
 # development process:
-CFLAGS += -DDEVELHELP
+DEVELHELP ?= 1
 
 USEMODULE += rtctimers-millis
+USEMODULE += shell
+USEMODULE += shell_commands
+USEMODULE += ps
+USEMODULE += opt3001
+USEMODULE += xtimer
 
+FEATURES_REQUIRED += periph_i2c
 FEATURES_REQUIRED += periph_rtc
 FEATURES_REQUIRED += periph_gpio
 
